@startuml
'https://plantuml.com/class-diagram

class MessageWebSocketDto {
    - final double latitude;
    - final double longitude;
}

class OutputMessageWebSocket {
    - final double latitude;
    - final double longitude;
    - final LocalDateTime date;
}

DriverController <|-- OutputMessageWebSocket
DriverController <|-- MessageWebSocketDto
class DriverController {
    - static final Logger logger = LoggerFactory.getLogger(DriverController.class);
    + OutputMessageWebSocket handleDriverLocation(MessageWebSocketDto webSocketDto);
}

@enduml